--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -225,7 +225,7 @@
   }
 
   .headshot-container {
-    margin: 0 0 1rem 0;
+    margin: 2rem 0 1rem 0;
   }
 
   .home-text-container {
